@@ -310,6 +310,10 @@ Options:
                 Enables the Unit Test portion of the SFCB testsuite.
                 Default=no
 
+        --enable-uds
+                Enables UDS authentication for the http server.
+                Default=no
+
 
 9. Downloading the CIM Schema
 =============================
