@@ -34,6 +34,7 @@ Bugs fixed:
 - 2192041 cleanup semaphore array access
 - 2143287 Memory leak in getInstance up-call
 - 2192053 _methProvider return value not checked propery
+- 2226259 Make UDS Authentication optional
 
 Changes in 1.3.2
 ================
