@@ -1,3 +1,8 @@
+2008-11-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* configure.ac httpAdapter.c sfcBroker.c:
+		Fixed [ 2226259 ] Make UDS Authentication optional
+
 2008-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* providerMgr.c:
